# diploma2019

./: CMakeLists.txt  Classic_Newton.cpp  Classic_Newton.h  RK4.cpp  RK4.h  SubFunctions.cpp  SubFunctions.h  gauss.cpp  gauss.h  iterSystemSolver.cpp  iterSystemSolver.h  main.cpp  residual.cpp  residual.h
